<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <!-- _________globals____________ -->
    <string name="app_name">Urotu Stent</string>
    <string name="app_name_note" translatable="false">รายการแจ้งเตือนนัดหมาย</string>
    <string name="undo">Undo</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="apply">Apply</string>
    <string name="cntnue">Continue</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="abort">Abort</string>
    <string name="today">today</string>
    <string name="noEntries">ยังไม่มีการสร้างนัดหมาย</string>
    <string name="noEventsFound">No events found :(</string>
    <string name="necessary">(จำเป็นต้องกรอก)</string>

    <!-- settings -->
    <string name="settings_title">ตั้งค่าการแจ้งเตือน</string>
    <string name="settings_action_back_to_home">กลับสู่หน้าหลัก</string>

    <string name="title_activity_menu" translatable="false">MenuActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">นวกาญจน์ นิลประวิทย์</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="menu_diagnosis" translatable="false">การวินิจฉัย</string>
    <string name="menu_home" translatable="false">รายการนัดของฉัน</string>
    <string name="menu_gallery" translatable="false">คำแนะนำ</string>
    <string name="menu_article" translatable="false">บทความ</string>
    <string name="menu_profile" translatable="false">ข้อมูลส่วนตัว</string>
    <string name="menu_questionnaire" translatable="false">แบบสอบถาม</string>
    <string name="menu_slideshow" translatable="false">อื่นๆ</string>
    <string name="menu_chat" translatable="false">แชท</string>
    <string name="menu_phone" translatable="false">เบอร์ติดต่อ</string>
    <string name="menu_logout" translatable="false">ออกจากระบบ</string>

    <!-- Detail activity-->
    <string name="doc_detail" translatable="false">Within the field of literary criticism, "text" also refers to the
        originalinformation content of a particular piece of writing; that is, the "text" of a
        work is that primal symbolic arrangement of letters as originally composed, apart from
        later alterations, deterioration, commentary, translations, paratext, etc. Therefore, when
        literary criticism is concerned with the determination of a "text", it is concerned with
        subtracted from that content as it appears in a given textual document (that is, a physical
        representation of text).Since the history of writing predates the concept of the "text",
        narrow range of the types described by text theory. The concept of "text" becomes relevant
        if and when a "coherent written message is completed and needs to be referred to inde
        pendently of the circumstances in which it was created.</string>
    <string name="doc_topic" translatable="false"> Name doc </string>
    <string name="medic_name_mock" translatable="false">ส่ง email เพื่อขอคำแนะนำ</string>

    <!-- Home Fragment-->
    <string name="name_topic_1" translatable="false">สายระบายค้ำท่อไตคืออะไร</string>
    <string name="name_topic_2" translatable="false">ผลข้างเคียงที่พบได้จากการใส่สายระบายค้ำท่อไต</string>
    <string name="name_topic_3" translatable="false">วิธีการลดอาการ</string>
    <string name="name_topic_4" translatable="false">ผลต่อการใช้ชีวิตประจำวัน</string>
    <string name="name_topic_5" translatable="false">การเอาสายระบายค้ำท่อไตออก</string>
    <string name="name_topic_6" translatable="false">ผลข้างเคียงที่เกิดได้จากการคาสายระบายค้ำท่อไตเกินกำหนด</string>
    <string name="name_topic_7" translatable="false">เมื่อไหร่ต้องมาพบแพทย์ก่อนนัดหมาย</string>
    <string name="detail_1" translatable="false">สายที่มีลักษณะเป็นท่อ ส่วนมากทำมาจากพลาสติก ทำหน้าที่ในการระบายน้ำปัสสาวะจากไต ลดการติดเชื้อและป้องกันภาวะท่อไตตีบจากการผ่าตัดรักษา</string>
    <string name="detail_2" translatable="false">
            1.ปัสสาวะบ่อยมากขึ้น และรู้สึกต้องรีบปัสสาวะอย่างเร่งด่วน
            2.มีอาการปวดหลังขณะปัสสาวะ
            3.ปัสสาวะมีเลือดปน
            4.รู้สึกปัสสาวะไม่สุด
            5.มีอาการปวดท้องน้อย
    </string>
    <!-- Guide Fragment -->
    <string name="logout_description" translatable="false">คุณต้องการกลับไปหน้าเข้าสู่ระบบใหม่อีกครั้ง ?</string>
    <string name="logout" translatable="false">ออกจากระบบ</string>

    <!-- Setting Activity-->
    <string name="setting_description" translatable="false">ระบบจะแจ้งเตือนรายการนัดหมายตามที่ท่านได้ตั้งค่าในปฎิทิน</string>

    <!-- Policy Activity-->
    <string name="policy" translatable="false">\t \tทางคณะผู้จัดทำทราบเป็นอย่างดีว่าท่านให้ความสำคัญกับข้อมูลส่วนบุคคลของท่าน มากเพียงใด และทางคณะผู้จัดทำมีความยินดีเป็นอย่างยิ่งที่ท่านให้ความสนใจในการเข้าร่วมงานวิจัยในครั้งนี้ ทางคณะผู้จัดทำจึงขอเรียนให้ท่านทราบถึงนโยบายคุ้มครองข้อมูลส่วนบุคคล ของผู้ป่วยดังนี้
	 \n \t \t นโยบายส่วนบุคคลฉบับนี้ครอบคลุมบริการในงานวิจัยของคณะผู้จัดทำได้แก่ แอปพลิเคชั่นในระบบแอนดรอยด์ และเว็บไซด์ โดยที่ข้อมูลส่วนบุคลของผู้ป่วย ประวัติการรักษา ผลการรักษา และการติดต่อสื่อสารระหว่างผู้ป่วย และทางคณะผุ้จัดทำ จะเข้าถึงได้เฉพาะผู้ป่วย และคณะผู้จัดทำเท่านั้น ผู้อื่นจะไม่สามารถเข้าถึงข้อมูลได้ ข้อมูลดังกล่าวทางคณะผู้จัดทำ จะมีการนำไปใช้เพื่อการศึกษาวิจัย และพัฒนาระบบการติดตามนัดหมายผู้ป่วยเท่านั้น
	 \n \t \t ทั้งนี้เนื่องจากทางคณะผู้จัดทำมีนโยบายในการพัฒนา และปรับปรุงระบบอย่างต่อเนื่อง ดังนั้น นโยบายคุ้มครองความเป็นส่วนตัวฉบับนี้อาจมีการแก้ไขเปลี่ยนแปลงเป็นครั้งคราว จึงแนะนำให้ท่านตรวจสอบ นโยบายดังกล่าวนี้เป็นระยะๆ เพื่อที่ท่านจะได้เข้าใจนโยบายความเป็นส่วนตัวล่าสุด ท่านรับทราบเป็นอย่างดีว่า การเข้าร่วมงานวิจัย และใช้บริการของทางคณะผู้จัดทำ ถือว่าทานได้รับทราบ และยินยอม ปฎิบัติตามนโยบายคุ้มครองข้อมูลส่วนบุคคลฉบับนี้ และฉบับแก้ไขเพิ่มตเมในอนาคต หากท่านต้องการทราบรายละเอียดของนโยบายความเป็นนส่ววนตัวเพิ่มเติม สามารถติดต่อทางคณะผู้จัดทำได้ได้ที่ช่องทางติดต่อต่างๆ ที่ระบุไว้ภายในแอปพลิเคชั่น </string>

    <!-- Chat Activity-->
    <string name="start_typing">ข้อความ</string>

    <!-- Chat Fragment-->
    <string name="txt_head" translatable="false">คุณต้องการเปิดแชท LINE คุยกับหมอ ?</string>
    <string name="line_txt">กดเปิดแชท Line</string>


</resources>