<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_diagnosis"
            android:title="@string/menu_diagnosis" />

        <item
            android:id="@+id/nav_gallery"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_profile"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_chat"
            android:title="@string/menu_chat" />

        <item
            android:id="@+id/nav_phone"
            android:title="@string/menu_phone" />
   


</menu>