<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DetailActivity">

        <ImageView
            android:id="@+id/image_view_doc1"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@color/cardview_dark_background"
            android:scaleType="fitXY"
            android:src="@drawable/screen_shot" />

        <LinearLayout
            android:id="@+id/linear_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image_view_doc1"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_topic_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:padding="5dp"
                android:text="@string/name_topic_1"
                android:textColor="@color/dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_topic_1"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/view_medic_bg"
                android:padding="15dp"
                android:text="@string/doc_detail"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/name_topic_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:padding="5dp"
                android:text="@string/name_topic_2"
                android:textColor="@color/dark"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/detail_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_topic_1"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/view_medic_bg"
                android:padding="15dp"
                android:text="@string/doc_detail"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/name_topic_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:padding="5dp"
                android:text="@string/name_topic_3"
                android:textColor="@color/dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_topic_1"
                android:layout_margin="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/view_medic_bg"
                android:padding="15dp"
                android:text="@string/doc_detail"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/name_topic_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:padding="5dp"
                android:text="@string/name_topic_4"
                android:textColor="@color/dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_topic_1"
                android:layout_margin="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/view_medic_bg"
                android:padding="15dp"
                android:text="@string/doc_detail"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/name_topic_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:padding="5dp"
                android:text="@string/name_topic_5"
                android:textColor="@color/dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_topic_1"
                android:layout_margin="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/view_medic_bg"
                android:padding="15dp"
                android:text="@string/doc_detail"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/name_topic_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:padding="5dp"
                android:text="@string/name_topic_6"
                android:textColor="@color/dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_topic_1"
                android:layout_margin="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/view_medic_bg"
                android:padding="15dp"
                android:text="@string/doc_detail"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/name_topic_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:padding="5dp"
                android:text="@string/name_topic_7"
                android:textColor="@color/dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/name_topic_1"
                android:layout_margin="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/view_medic_bg"
                android:padding="15dp"
                android:text="@string/doc_detail"
                android:textSize="15sp" />
        </LinearLayout>

    </RelativeLayout>


</ScrollView>